// file: pkg/services/implementations.go
// version: 1.1.0
// guid: 9a8b7c6d-5e4f-3a2b-1c0d-9e8f7a6b5c4d

package services

import (
	"context"
	"fmt"

	// Generated protobuf packages
	enginev1 "github.com/jdfalk/subtitle-manager/pkg/engine/v1"
	filev1 "github.com/jdfalk/subtitle-manager/pkg/file/v1"
	webv1 "github.com/jdfalk/subtitle-manager/pkg/web/v1"

	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/status"
	"google.golang.org/protobuf/types/known/emptypb"
)

// WebServiceImpl provides a basic implementation for the web service
// This validates that our interfaces are compatible with the generated protobuf interfaces
type WebServiceImpl struct{}

// NewWebService creates a new web service implementation
func NewWebService() *WebServiceImpl {
	return &WebServiceImpl{}
}

// Authentication operations
func (w *WebServiceImpl) AuthenticateUser(ctx context.Context, req *webv1.AuthenticateUserRequest) (*webv1.AuthenticateUserResponse, error) {
	return &webv1.AuthenticateUserResponse{}, status.Errorf(codes.Unimplemented, "AuthenticateUser not implemented")
}

func (w *WebServiceImpl) LogoutUser(ctx context.Context, req *webv1.LogoutUserRequest) (*emptypb.Empty, error) {
	return &emptypb.Empty{}, nil
}

// User management
func (w *WebServiceImpl) GetUser(ctx context.Context, req *webv1.GetUserRequest) (*webv1.GetUserResponse, error) {
	return &webv1.GetUserResponse{}, status.Errorf(codes.Unimplemented, "GetUser not implemented")
}

func (w *WebServiceImpl) UpdateUser(ctx context.Context, req *webv1.UpdateUserRequest) (*webv1.UpdateUserResponse, error) {
	return &webv1.UpdateUserResponse{}, status.Errorf(codes.Unimplemented, "UpdateUser not implemented")
}

func (w *WebServiceImpl) UpdateUserPreferences(ctx context.Context, req *webv1.UpdateUserPreferencesRequest) (*webv1.UpdateUserPreferencesResponse, error) {
	return &webv1.UpdateUserPreferencesResponse{}, status.Errorf(codes.Unimplemented, "UpdateUserPreferences not implemented")
}

// File operations
func (w *WebServiceImpl) UploadSubtitle(ctx context.Context, req *webv1.UploadSubtitleRequest) (*webv1.UploadSubtitleResponse, error) {
	return &webv1.UploadSubtitleResponse{}, status.Errorf(codes.Unimplemented, "UploadSubtitle not implemented")
}

func (w *WebServiceImpl) DownloadSubtitle(ctx context.Context, req *webv1.DownloadSubtitleRequest) (*webv1.DownloadSubtitleResponse, error) {
	return &webv1.DownloadSubtitleResponse{}, status.Errorf(codes.Unimplemented, "DownloadSubtitle not implemented")
}

func (w *WebServiceImpl) SearchSubtitles(ctx context.Context, req *webv1.SearchSubtitlesRequest) (*webv1.SearchSubtitlesResponse, error) {
	return &webv1.SearchSubtitlesResponse{}, status.Errorf(codes.Unimplemented, "SearchSubtitles not implemented")
}

// Translation operations
func (w *WebServiceImpl) TranslateSubtitle(ctx context.Context, req *webv1.TranslateSubtitleRequest) (*webv1.TranslateSubtitleResponse, error) {
	return &webv1.TranslateSubtitleResponse{}, status.Errorf(codes.Unimplemented, "TranslateSubtitle not implemented")
}

func (w *WebServiceImpl) GetTranslationStatus(ctx context.Context, req *webv1.GetTranslationStatusRequest) (*webv1.GetTranslationStatusResponse, error) {
	return &webv1.GetTranslationStatusResponse{}, status.Errorf(codes.Unimplemented, "GetTranslationStatus not implemented")
}

func (w *WebServiceImpl) CancelTranslation(ctx context.Context, req *webv1.CancelTranslationRequest) (*webv1.CancelTranslationResponse, error) {
	return &webv1.CancelTranslationResponse{}, status.Errorf(codes.Unimplemented, "CancelTranslation not implemented")
}

// Streaming operations
func (w *WebServiceImpl) UploadFile(stream webv1.WebService_UploadFileServer) error {
	return status.Errorf(codes.Unimplemented, "UploadFile streaming not implemented")
}

func (w *WebServiceImpl) DownloadFile(req *webv1.DownloadFileRequest, stream webv1.WebService_DownloadFileServer) error {
	return status.Errorf(codes.Unimplemented, "DownloadFile streaming not implemented")
}

// Health check
func (w *WebServiceImpl) HealthCheck(ctx context.Context, req *webv1.HealthCheckRequest) (*webv1.HealthCheckResponse, error) {
	return &webv1.HealthCheckResponse{}, nil
}

// EngineServiceImpl provides a basic implementation for the engine service
type EngineServiceImpl struct{}

// NewEngineService creates a new engine service implementation
func NewEngineService() *EngineServiceImpl {
	return &EngineServiceImpl{}
}

// All engine methods are stub implementations
func (e *EngineServiceImpl) TranscribeAudio(ctx context.Context, req *enginev1.TranscribeAudioRequest) (*enginev1.TranscribeAudioResponse, error) {
	return &enginev1.TranscribeAudioResponse{}, status.Errorf(codes.Unimplemented, "TranscribeAudio not implemented")
}

func (e *EngineServiceImpl) GetTranscriptionStatus(ctx context.Context, req *enginev1.GetTranscriptionStatusRequest) (*enginev1.GetTranscriptionStatusResponse, error) {
	return &enginev1.GetTranscriptionStatusResponse{}, status.Errorf(codes.Unimplemented, "GetTranscriptionStatus not implemented")
}

func (e *EngineServiceImpl) CancelTranscription(ctx context.Context, req *enginev1.CancelTranscriptionRequest) (*enginev1.CancelTranscriptionResponse, error) {
	return &enginev1.CancelTranscriptionResponse{}, status.Errorf(codes.Unimplemented, "CancelTranscription not implemented")
}

func (e *EngineServiceImpl) TranslateSubtitle(ctx context.Context, req *enginev1.TranslateSubtitleRequest) (*enginev1.TranslateSubtitleResponse, error) {
	return &enginev1.TranslateSubtitleResponse{}, status.Errorf(codes.Unimplemented, "TranslateSubtitle not implemented")
}

func (e *EngineServiceImpl) GetTranslationProgress(ctx context.Context, req *enginev1.GetTranslationProgressRequest) (*enginev1.GetTranslationProgressResponse, error) {
	return &enginev1.GetTranslationProgressResponse{}, status.Errorf(codes.Unimplemented, "GetTranslationProgress not implemented")
}

func (e *EngineServiceImpl) CancelTranslation(ctx context.Context, req *enginev1.CancelTranslationRequest) (*enginev1.CancelTranslationResponse, error) {
	return &enginev1.CancelTranslationResponse{}, status.Errorf(codes.Unimplemented, "CancelTranslation not implemented")
}

func (e *EngineServiceImpl) ConvertSubtitle(ctx context.Context, req *enginev1.ConvertSubtitleRequest) (*enginev1.ConvertSubtitleResponse, error) {
	return &enginev1.ConvertSubtitleResponse{}, status.Errorf(codes.Unimplemented, "ConvertSubtitle not implemented")
}

func (e *EngineServiceImpl) ValidateSubtitle(ctx context.Context, req *enginev1.ValidateSubtitleRequest) (*enginev1.ValidateSubtitleResponse, error) {
	return &enginev1.ValidateSubtitleResponse{}, status.Errorf(codes.Unimplemented, "ValidateSubtitle not implemented")
}

func (e *EngineServiceImpl) MergeSubtitles(ctx context.Context, req *enginev1.MergeSubtitlesRequest) (*enginev1.MergeSubtitlesResponse, error) {
	return &enginev1.MergeSubtitlesResponse{}, status.Errorf(codes.Unimplemented, "MergeSubtitles not implemented")
}

func (e *EngineServiceImpl) GetEngineStatus(ctx context.Context, req *enginev1.GetEngineStatusRequest) (*enginev1.GetEngineStatusResponse, error) {
	return &enginev1.GetEngineStatusResponse{}, nil
}

func (e *EngineServiceImpl) HealthCheck(ctx context.Context, req *enginev1.HealthCheckRequest) (*enginev1.HealthCheckResponse, error) {
	return &enginev1.HealthCheckResponse{}, nil
}

// FileServiceImpl provides a basic implementation for the file service
type FileServiceImpl struct{}

// NewFileService creates a new file service implementation
func NewFileService() *FileServiceImpl {
	return &FileServiceImpl{}
}

// File management with streaming operations
func (f *FileServiceImpl) UploadFile(stream filev1.FileService_UploadFileServer) error {
	return status.Errorf(codes.Unimplemented, "UploadFile streaming not implemented")
}

func (f *FileServiceImpl) DownloadFile(req *filev1.DownloadFileRequest, stream filev1.FileService_DownloadFileServer) error {
	return status.Errorf(codes.Unimplemented, "DownloadFile streaming not implemented")
}

func (f *FileServiceImpl) DeleteFile(ctx context.Context, req *filev1.DeleteFileRequest) (*filev1.DeleteFileResponse, error) {
	return &filev1.DeleteFileResponse{}, status.Errorf(codes.Unimplemented, "DeleteFile not implemented")
}

func (f *FileServiceImpl) GetFileInfo(ctx context.Context, req *filev1.GetFileInfoRequest) (*filev1.GetFileInfoResponse, error) {
	return &filev1.GetFileInfoResponse{}, status.Errorf(codes.Unimplemented, "GetFileInfo not implemented")
}

func (f *FileServiceImpl) CopyFile(ctx context.Context, req *filev1.CopyFileRequest) (*filev1.CopyFileResponse, error) {
	return &filev1.CopyFileResponse{}, status.Errorf(codes.Unimplemented, "CopyFile not implemented")
}

func (f *FileServiceImpl) MoveFile(ctx context.Context, req *filev1.MoveFileRequest) (*filev1.MoveFileResponse, error) {
	return &filev1.MoveFileResponse{}, status.Errorf(codes.Unimplemented, "MoveFile not implemented")
}

func (f *FileServiceImpl) ListFiles(ctx context.Context, req *filev1.ListFilesRequest) (*filev1.ListFilesResponse, error) {
	return &filev1.ListFilesResponse{}, status.Errorf(codes.Unimplemented, "ListFiles not implemented")
}

func (f *FileServiceImpl) UpdateFileMetadata(ctx context.Context, req *filev1.UpdateFileMetadataRequest) (*filev1.UpdateFileMetadataResponse, error) {
	return &filev1.UpdateFileMetadataResponse{}, status.Errorf(codes.Unimplemented, "UpdateFileMetadata not implemented")
}

func (f *FileServiceImpl) SearchFiles(ctx context.Context, req *filev1.SearchFilesRequest) (*filev1.SearchFilesResponse, error) {
	return &filev1.SearchFilesResponse{}, status.Errorf(codes.Unimplemented, "SearchFiles not implemented")
}

func (f *FileServiceImpl) GetStorageInfo(ctx context.Context, req *filev1.GetStorageInfoRequest) (*filev1.GetStorageInfoResponse, error) {
	return &filev1.GetStorageInfoResponse{}, status.Errorf(codes.Unimplemented, "GetStorageInfo not implemented")
}

func (f *FileServiceImpl) CleanupFiles(ctx context.Context, req *filev1.CleanupFilesRequest) (*filev1.CleanupFilesResponse, error) {
	return &filev1.CleanupFilesResponse{}, status.Errorf(codes.Unimplemented, "CleanupFiles not implemented")
}

func (f *FileServiceImpl) HealthCheck(ctx context.Context, req *filev1.HealthCheckRequest) (*filev1.HealthCheckResponse, error) {
	return &filev1.HealthCheckResponse{}, nil
}

// ServiceRegistryImpl provides centralized service management
type ServiceRegistryImpl struct {
	webService    WebServiceInterface
	engineService EngineServiceInterface
	fileService   FileServiceInterface
}

// NewServiceRegistry creates a new service registry
func NewServiceRegistry(webService WebServiceInterface, engineService EngineServiceInterface, fileService FileServiceInterface) *ServiceRegistryImpl {
	return &ServiceRegistryImpl{
		webService:    webService,
		engineService: engineService,
		fileService:   fileService,
	}
}

func (s *ServiceRegistryImpl) WebService() WebServiceInterface {
	return s.webService
}

func (s *ServiceRegistryImpl) EngineService() EngineServiceInterface {
	return s.engineService
}

func (s *ServiceRegistryImpl) FileService() FileServiceInterface {
	return s.fileService
}

func (s *ServiceRegistryImpl) HealthCheck(ctx context.Context) error {
	// Check web service
	_, err := s.webService.HealthCheck(ctx, &webv1.HealthCheckRequest{})
	if err != nil {
		return fmt.Errorf("web service health check failed: %w", err)
	}

	// Check engine service
	_, err = s.engineService.HealthCheck(ctx, &enginev1.HealthCheckRequest{})
	if err != nil {
		return fmt.Errorf("engine service health check failed: %w", err)
	}

	// Check file service
	_, err = s.fileService.HealthCheck(ctx, &filev1.HealthCheckRequest{})
	if err != nil {
		return fmt.Errorf("file service health check failed: %w", err)
	}

	return nil
}
